workload/apps/transmission-openvpn/manifests/deployment.yaml
---
# yamllint disable rule:line-length

apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission-openvpn
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: transmission-openvpn
      app.kubernetes.io/name: transmission-openvpn
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: transmission-openvpn
        app.kubernetes.io/name: transmission-openvpn
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: transmission-openvpn
            - secretRef:
                name: transmission-openvpn
          image: transmissionimage
          imagePullPolicy: IfNotPresent
          name: transmission-openvpn
          ports:
            - containerPort: 9091
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /config/transmission-home
              name: transmission
              subPath: transmission-home
            - mountPath: /data
              name: transmission
              subPath: data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: transmission-openvpn
      serviceAccountName: transmission-openvpn
      terminationGracePeriodSeconds: 30
      volumes:
        - name: transmission
          nfs:
            path: /volume1/transmission
            server: <path:vaults/mfjan54l7fzgdzlykwb2b6nj3a/items/zhs5mznp27sqsgr5y3znocy7ky#ip>
